--- a/total.ipynb
+++ b/total.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "gPu_1b7okaUU",
       "metadata": {
         "id": "gPu_1b7okaUU"
       },
-      "id": "gPu_1b7okaUU",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -3159,16 +3159,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# BPL_dataset_creator"
-      ],
+      "id": "-cBIrA0Qkbza",
       "metadata": {
         "id": "-cBIrA0Qkbza"
       },
-      "id": "-cBIrA0Qkbza"
+      "source": [
+        "# BPL_dataset_creator"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "id": "9k9Vf59Qkdqz",
+      "metadata": {
+        "id": "9k9Vf59Qkdqz"
+      },
+      "outputs": [],
       "source": [
         "def BPL_dataset_creator():\n",
         "\n",
@@ -4129,19 +4135,12 @@
         "\n",
         "    BPL_data_final.to_csv(path_or_buf= 'Final_data/BPL_data_final.csv', index=False)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "9k9Vf59Qkdqz"
-      },
-      "id": "9k9Vf59Qkdqz",
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "BPL_dataset_creator()"
-      ],
+      "execution_count": 6,
+      "id": "w-EXBncDkfE7",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4150,12 +4149,10 @@
         "id": "w-EXBncDkfE7",
         "outputId": "6e6d38e0-f4ea-46c8-f043-a48cbdbc0f3f"
       },
-      "id": "w-EXBncDkfE7",
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['2000/01']\n",
             "19/08/00\n",
@@ -4244,9 +4241,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "FileNotFoundError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
@@ -4263,30 +4260,39 @@
             "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'league_tables/BPL_table_rank.csv'"
           ]
         }
+      ],
+      "source": [
+        "BPL_dataset_creator()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "r8HW0tdYkjWx",
       "metadata": {
         "id": "r8HW0tdYkjWx"
       },
-      "id": "r8HW0tdYkjWx",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Bundesliga_dataset_creator"
-      ],
+      "id": "SWqhKe2TmrUa",
       "metadata": {
         "id": "SWqhKe2TmrUa"
       },
-      "id": "SWqhKe2TmrUa"
+      "source": [
+        "# Bundesliga_dataset_creator"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "lwKARWT0mwCR",
+      "metadata": {
+        "id": "lwKARWT0mwCR"
+      },
+      "outputs": [],
       "source": [
         "def Bundesliga_dataset_creator():   \n",
         "    # -*- coding: utf-8 -*-\n",
@@ -5273,48 +5279,48 @@
         "\n",
         "    Bundesliga_data_final.to_csv(path_or_buf= 'Final_data/Bundesliga_data_final.csv', index=False)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "lwKARWT0mwCR"
-      },
-      "id": "lwKARWT0mwCR",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Bundesliga_dataset_creator()"
-      ],
+      "execution_count": null,
+      "id": "lJ7qBNeWnDUB",
       "metadata": {
         "id": "lJ7qBNeWnDUB"
       },
-      "id": "lJ7qBNeWnDUB",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "Bundesliga_dataset_creator()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "S7d5ilrhnMQK",
       "metadata": {
         "id": "S7d5ilrhnMQK"
       },
-      "id": "S7d5ilrhnMQK",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# LaLiga_dataset_creator:"
-      ],
+      "id": "fhbykrbEnMvR",
       "metadata": {
         "id": "fhbykrbEnMvR"
       },
-      "id": "fhbykrbEnMvR"
+      "source": [
+        "# LaLiga_dataset_creator:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "QjCQXJ86nUzq",
+      "metadata": {
+        "id": "QjCQXJ86nUzq"
+      },
+      "outputs": [],
       "source": [
         "def LaLiga_dataset_creator():\n",
         "    # -*- coding: utf-8 -*-\n",
@@ -6292,38 +6298,38 @@
         "\n",
         "    LaLiga_data_final.to_csv(path_or_buf= 'Final_data/LaLiga_data_final.csv', index=False)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "QjCQXJ86nUzq"
-      },
-      "id": "QjCQXJ86nUzq",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "LaLiga_dataset_creator()"
-      ],
+      "execution_count": null,
+      "id": "aHOHqXH5ngNp",
       "metadata": {
         "id": "aHOHqXH5ngNp"
       },
-      "id": "aHOHqXH5ngNp",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "LaLiga_dataset_creator()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Ligue1_dataset_creator"
-      ],
+      "id": "YmTUi8wEnf15",
       "metadata": {
         "id": "YmTUi8wEnf15"
       },
-      "id": "YmTUi8wEnf15"
+      "source": [
+        "# Ligue1_dataset_creator"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "rtxpB1V6nv2c",
+      "metadata": {
+        "id": "rtxpB1V6nv2c"
+      },
+      "outputs": [],
       "source": [
         "def Ligue1_dataset_creator():    \n",
         "    # -*- coding: utf-8 -*-\n",
@@ -7459,38 +7465,38 @@
         "    \"\"\"## Save created dataset\"\"\"\n",
         "\n",
         "    Ligue1_data_final.to_csv(path_or_buf= 'Final_data/Ligue1_data_final.csv', index=False)"
-      ],
-      "metadata": {
-        "id": "rtxpB1V6nv2c"
-      },
-      "id": "rtxpB1V6nv2c",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Ligue1_dataset_creator()"
-      ],
+      "execution_count": null,
+      "id": "15HO5oThn6qZ",
       "metadata": {
         "id": "15HO5oThn6qZ"
       },
-      "id": "15HO5oThn6qZ",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "Ligue1_dataset_creator()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# SerieA_dataset_creator"
-      ],
+      "id": "09-OladDn9-K",
       "metadata": {
         "id": "09-OladDn9-K"
       },
-      "id": "09-OladDn9-K"
+      "source": [
+        "# SerieA_dataset_creator"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "Ki_tAx-YoP0Z",
+      "metadata": {
+        "id": "Ki_tAx-YoP0Z"
+      },
+      "outputs": [],
       "source": [
         "def SerieA_dataset_creator():    \n",
         "    # -*- coding: utf-8 -*-\n",
@@ -8590,28 +8596,26 @@
         "    SerieA_data_final.to_csv(path_or_buf= 'Final_data/SerieA_data_final.csv', index=False)\n",
         "\n",
         "    SerieA_data_final"
-      ],
-      "metadata": {
-        "id": "Ki_tAx-YoP0Z"
-      },
-      "id": "Ki_tAx-YoP0Z",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "SerieA_dataset_creator()"
-      ],
+      "execution_count": null,
+      "id": "LDlAM1iVoQdH",
       "metadata": {
         "id": "LDlAM1iVoQdH"
       },
-      "id": "LDlAM1iVoQdH",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "SerieA_dataset_creator()"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -8627,7 +8631,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.8"
+      "version": "3.10.4"
     },
     "varInspector": {
       "cols": {
@@ -8665,9 +8669,10 @@
       ],
       "window_display": false
     },
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
+    "vscode": {
+      "interpreter": {
+        "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+      }
     }
   },
   "nbformat": 4,
